ajout boutons de controle

--- a/web_code2/index.html
+++ b/web_code2/index.html
@@ -1,1 +1,12 @@
 <script src="./fetchGet.js"></script>
+
+
+
+<button onclick="setLed(RED,255)">Allumer RED</button> 
+<button onclick="setLed(RED,0)">Eteindre RED</button> 
+<br>
+<button onclick="setLed(GREEN,255)">Allumer GREEN</button> 
+<button onclick="setLed(GREEN,0)">Eteindre GREEN</button> 
+<br>
+<button onclick="setLed(BLUE,255)">Allumer BLUE</button> 
+<button onclick="setLed(BLUE,0)">Eteindre BLUE</button>
