ajout fonctionnnalité en JS pour controller les led

--- a/web_code2/index.html
+++ b/web_code2/index.html
@@ -1,12 +1,39 @@
+
+<div>
+    <input type="range" id="RED_LED" name="RED_LED"
+            min="0" max="255">
+    <label for="RED_LED">RED</label>
+
+</div>
+
+<div>
+    <input type="range" id="GREEN_LED" name="GREEN_LED"
+            min="0" max="255">
+    <label for="GREEN_LED">GREEN</label>
+
+</div>
+
+<div>
+    <input type="range" id="BLUE_LED" name="BLUE_LED"
+            min="0" max="255">
+    <label for="BLUE_LED">BLUE</label>
+
+</div>
+
 <script src="./fetchGet.js"></script>
 
 
 
-<button onclick="setLed(RED,255)">Allumer RED</button> 
-<button onclick="setLed(RED,0)">Eteindre RED</button> 
+
 <br>
-<button onclick="setLed(GREEN,255)">Allumer GREEN</button> 
-<button onclick="setLed(GREEN,0)">Eteindre GREEN</button> 
-<br>
-<button onclick="setLed(BLUE,255)">Allumer BLUE</button> 
-<button onclick="setLed(BLUE,0)">Eteindre BLUE</button>
+
+<!-- Write your comments here 
+    <button onclick="setLed(RED,255)">Allumer RED</button> 
+    <button onclick="setLed(RED,0)">Eteindre RED</button> 
+    <br>
+    <button onclick="setLed(GREEN,255)">Allumer GREEN</button> 
+    <button onclick="setLed(GREEN,0)">Eteindre GREEN</button> 
+    <br>
+    <button onclick="setLed(BLUE,255)">Allumer BLUE</button> 
+    <button onclick="setLed(BLUE,0)">Eteindre BLUE</button>
+-->
