avoir infos du bouton 1

--- a/web_code2/spin.html
+++ b/web_code2/spin.html
@@ -163,9 +163,9 @@
 
         <a href="index.html">Manual Control</a>
         <br>
-        <a href="spin">Wheel of fortune Control</a>
+        <a href="spin.html">Wheel of fortune Control</a>
         <br>
-        <a href="wheel">Wheel manual Control</a>
+        <a href="wheel.html">Wheel manual Control</a>
     </div>
 
 </body>
