--- a/web_code2/index.html
+++ b/web_code2/index.html
@@ -42,20 +42,22 @@
         setLed(BLUE,document.getElementById("BLUE_LED").value );
     </script>
     
+
+    <button onclick="getButton(1)">Avoir l'info du bouton 1</button>
+    <input type="text" id="button1_info">
+
     <br>
     
     <div>
         <h3>Ways of controlling the leds : </h3>
 
-        <a href="#">Manual Control</a>
+        <a href="index.html">Manual Control</a>
         <br>
-        <a href="spin">Wheel of fortune Control</a>
+        <a href="spin.html">Wheel of fortune Control</a>
         <br>
-        <a href="wheel">Wheel manual Control</a>
+        <a href="wheel.html">Wheel manual Control</a>
     </div>
  
-
-
 
 <!-- Write your comments here 
     <button onclick="setLed(RED,255)">Allumer RED</button> 
