--- a/web_code2/wheel.html
+++ b/web_code2/wheel.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="ressources/css/main.css" type="text/css" />
+
+    <title>Led Control</title>
+
+</head>
+<body>
+
 <div>
     <h1>Wheel Control</h1>
 
@@ -8,9 +19,14 @@
 <div>
     <h3>Ways of controlling the leds : </h3>
 
-    <a href="#">Manual Control</a>
+    <a href="index.html">Manual Control</a>
     <br>
-    <a href="spin">Wheel of fortune Control</a>
+    <a href="spin.html">Wheel of fortune Control</a>
     <br>
-    <a href="wheel">Wheel manual Control</a>
+    <a href="wheel.html">Wheel manual Control</a>
 </div>
+
+
+</body>
+
+</html>
