avoir infos du bouton 1

--- a/web_code2/index.html
+++ b/web_code2/index.html
@@ -47,6 +47,18 @@
     <input type="text" id="button1_info">
 
     <br>
+
+    <button onclick="callFunction('start_motor')">Start motor</button>
+    <button onclick="callFunction('stop_motor')">Stop motor</button>
+    <br>
+    <br>
+    <button onclick="callFunction2('distance')">Get Distance</button>
+    <input type="text" id="func2">
+    <script>
+        callFunction2('distance');
+    </script>
+
+    <br>
     
     <div>
         <h3>Ways of controlling the leds : </h3>
